<resources>
    <string name="cmm_confirm">Confirm</string>
    <string name="cmm_continue">Continue</string>
    <string name="cmm_cancel">Cancel</string>
    <string name="cmm_apply">Apply</string>
    <string name="cmm_reject">Reject</string>
    <string name="cmm_accept">Accept</string>
    <string name="cmm_accepted">Accepted</string>
    <string name="cmm_know">I got it</string>
    <string name="cmm_submit">Submit</string>
    <string name="cmm_refresh">Refresh</string>
    <string name="cmm_update">Update</string>
    <string name="cmm_yes">Yes</string>
    <string name="cmm_no">No</string>
    <string name="cmm_edit">Edit</string>
    <string name="cmm_loading">Loading…</string>
    <string name="cmm_admin">Host</string>
    <string name="cmm_member">Member</string>
    <string name="net_unavailable">No network available</string>
    <string name="net_request_error">Server request error: %1$d</string>
    <string name="net_requests_expired">Requests expired</string>
    <string name="net_upload_success">Upload successfully</string>
    <string name="net_upload_failed">Failed to upload. Please check your network status.</string>
    <string name="net_request_sent">Request sent</string>
    <string name="net_sent_failed">Request sent failed</string>
    <string name="login_signal">Signal</string>
    <string name="login_open_camera">Open camera</string>
    <string name="login_open_mic">Open mic</string>
    <string name="login_enter_setting">Setting before joining</string>
    <string name="login_enter">Join</string>
    <string name="login_room_name">Room name</string>
    <string name="login_room_pwd">Room password</string>
    <string name="login_name">User name</string>
    <string name="login_role">Role</string>
    <string name="login_pwd_tips">• When the room already exists, you need to enter the correct password\n• When the room does not exist, the password entered will become the password of this room\n• The room can be without password</string>
    <string name="login_limit_tip">This is a testing product. Please refrain from using it commercially. The max duration per session is 45 minutes.</string>
    <string name="login_tip_room_name_empty">Please enter the room name</string>
    <string name="login_tip_room_name_over">Room name max length is 50 characters</string>
    <string name="login_tip_room_name_short">Room name min length is 3 characters</string>
    <string name="login_tip_room_pass_over">Password max length is 20 characters</string>
    <string name="login_tip_user_name_empty">Please enter the user name</string>
    <string name="login_tip_user_name_over">User name max length is 20 characters</string>
    <string name="login_tip_user_name_short">User name min length is 3 characters</string>
    <string name="invite_meeting_name">Meeting name: %1$s</string>
    <string name="invite_meeting_pwd">Meeting password: %1$s</string>
    <string name="invite_invited_by">Invited by: %1$s</string>
    <string name="invite_web_link">Web link: %1$s</string>
    <string name="invite_android_link">Android link: %1$s</string>
    <string name="invite_ios_link">iOS link: %1$s</string>
    <string name="invite_copy_meeting_info">Copy meeting information</string>
    <string name="invite_copy_link">Copy Link</string>
    <string name="setting_title">Setting</string>
    <string name="setting_avatar">Profile picture</string>
    <string name="setting_camera">Camera</string>
    <string name="setting_room_setting">Room setting</string>
    <string name="setting_mic">Mic</string>
    <string name="setting_beauty">Beauty (Coming soon)</string>
    <string name="setting_upload_log">Upload log</string>
    <string name="setting_camera_approve">Permission needed to turn cam on</string>
    <string name="setting_mic_approve">Permission needed to turn mic on</string>
    <string name="setting_ai_noise">Ai audio noise reduction (Coming soon)</string>
    <string name="setting_turn_off_notify">Turn off  in/out notifications</string>
    <string name="whiteboard_title">WhiteBoard</string>
    <string name="whiteboard_enter">Enter WhiteBoard</string>
    <string name="main_router">Audio router</string>
    <string name="main_switcher">Switch camera</string>
    <string name="main_audio">Audio</string>
    <string name="main_video">Video</string>
    <string name="main_member">Member</string>
    <string name="main_chat">Chat</string>
    <string name="main_message">Message</string>
    <string name="main_notification">Notification</string>
    <string name="main_more">More</string>
    <string name="main_member_enter">"%1$s" enters</string>
    <string name="main_member_leave">"%1$s" leaves</string>
    <string name="main_exit">Leave</string>
    <string name="main_user_mute">Mute</string>
    <string name="main_user_unmute">Unmute</string>
    <string name="main_user_close_video">Close video</string>
    <string name="main_user_open_video">Open video</string>
    <string name="main_user_set_as_host">Set as host</string>
    <string name="main_notify_user_leave">leave</string>
    <string name="main_notify_user_enter">enter</string>
    <string name="main_kick_out">Move out of the room</string>
    <string name="main_exit_title">Do you want to leave the room?</string>
    <string name="main_exit_message">To keep the meeting running, please assign a new host before you leave</string>
    <string name="main_close_meeting">End meeting</string>
    <string name="main_exit_meeting">Exit meeting</string>
    <string name="main_exit_room">Exit room</string>
    <string name="main_close_title">The meeting has ended</string>
    <string name="main_rate">Please rate the conference call quality</string>
    <string name="main_removed_from_room">You have been removed from the room</string>
    <string name="main_screen_sharing">You are screen sharing</string>
    <string name="main_become_host">Become host</string>
    <string name="invite_clipboard">Successfully saved to clipboard</string>
    <string name="invite_meeting_info_copy_success">Meeting info has been saved to clipboard successfully</string>
    <string name="more_invite">Invite</string>
    <string name="more_mute_all_camera">All attendees cam off</string>
    <string name="more_mute_all_mic">All attendees mic off</string>
    <string name="more_unmute_all">Unmute all</string>
    <string name="more_record">Record</string>
    <string name="more_open_board">Initiate whiteboard</string>
    <string name="more_close_board">End</string>
    <string name="more_join_board">Join editing</string>
    <string name="more_quit_board">Quit editing</string>
    <string name="more_open_screen">Screen share</string>
    <string name="more_close_screen">End screen share</string>
    <string name="more_mute_audio">Mute</string>
    <string name="more_unmute_audio">Unmute</string>
    <string name="more_close_video">Close video</string>
    <string name="more_open_video">Open video</string>
    <string name="more_set_host">Set as host</string>
    <string name="more_renounce_admin">Renounce host</string>
    <string name="more_become_admin">Become host</string>
    <string name="more_move_out">Move out</string>
    <string name="more_authorize_board">Authorize whiteboard authority</string>
    <string name="more_cancel_board">Withdraw whiteboard authority</string>
    <string name="chat_input_tips">Enter chat content here</string>
    <string name="chat_send">Send</string>
    <string name="chat_send_failed">Message failed to send, please resend </string>
    <string name="member_list_title">Attendees list (%1$d)</string>
    <string name="member_list_me">%1$s&#160;(Me)</string>
    <string name="member_list_host">%1$s&#160;(Host)</string>
    <string name="member_list_host_me">%1$s&#160;(Host、Me)</string>
    <string name="member_list_search_hint">Search for attendees</string>
    <string name="member_setting">Member setting</string>
    <string name="allow_self_unmute">Allow members to lift their prohibitions</string>
    <string name="notify_member_option">More than %d people</string>
    <string name="notify_member_option_never_mute">Never mute</string>
    <string name="notify_member_option_always_mute">Always mute</string>
    <string name="about_title">About</string>
    <string name="about_check_upgrade">Check upgrade</string>
    <string name="about_register_account">Sign up Agora.io</string>
    <string name="about_view_document">View document</string>
    <string name="about_version_tips">Is the latest version, current version is V%1$s</string>
    <string name="about_new_version_tips">Not the latest version, current version is V%1$s</string>
    <string name="about_version_tips_all">Version:V%1$s, Release Time:%2$s\nRTC SDK Version:V%3$s, RTM SDK Version:V%4$s\nWhiteBoard Version:V%5$s</string>
    <string name="about_upgrade_title">Agora Meeting has a new version</string>
    <string name="about_upgrade">Upgrade now</string>
    <string name="about_later">Later</string>
    <string name="about_agreement">User agreement</string>
    <string name="about_product_disclaimer">Product disclaimer</string>
    <string name="about_policy">Privacy policy</string>
    <string name="about_user_policy">Terms of service</string>
    <string name="copyright" translatable="false">Copyright © 2020 OVC.</string>
    <string name="copyright_agora" translatable="false">www.agora.io</string>
    <string name="notify_popup_apply_audio_title">"%1$s" applied to turn on the mic</string>
    <string name="notify_popup_apply_video_title">"%1$s" applied to turn on the camera</string>
    <string name="notify_popup_accept_audio_apply_title">"%1$s" accepted your application to turn on the mic</string>
    <string name="notify_popup_reject_audio_apply_title">"%1$s" rejected your application to turn on the mic</string>
    <string name="notify_popup_accept_video_apply_title">"%1$s" accepted your application to turn on the camera</string>
    <string name="notify_popup_reject_video_apply_title">"%1$s" rejected your application to turn on the camera</string>
    <string name="notify_popup_apply_message">Do you agree to the application?</string>
    <string name="notify_popup_request_to_turn_mic_on">Request to turn mic on. Please prepare to speak in 20 seconds</string>
    <string name="notify_popup_request_to_turn_cam_on">Request to turn cam on. Please prepare to present in 20 seconds</string>
    <string name="notify_popup_leave_with_screenshare_on">You have ongoing screen share. Do you want to end it?</string>
    <string name="notify_popup_leave_with_whiteboard_on">You have ongoing whiteboard. Do you want to end it?</string>
    <string name="notify_popup_start_screen_share_tip">Screen share will show everything on your screen. Please update your notification setting accordingly.</string>
    <string name="notify_popup_start_sharing">Start sharing</string>
    <string name="notify_popup_permission_needed_to_turn_mic_on">Permission needed to turn mic on</string>
    <string name="notify_popup_permission_needed_to_turn_camera_on">Permission needed to turn cam on</string>
    <string name="notify_toast_mute_all_mic">All members mic off</string>
    <string name="notify_toast_mute_all_cam">All members cam off</string>
    <string name="notify_toast_cam_permission_on">Permission needed to turn cam on</string>
    <string name="notify_toast_cam_permission_off">You can turn cam on freely</string>
    <string name="notify_toast_mic_permission_on">Permission needed to turn mic on</string>
    <string name="notify_toast_mic_permission_off">You can turn mic on freely</string>
    <string name="rating_call_quality">Call Quality</string>
    <string name="rating_function_completeness">Function Completeness</string>
    <string name="rating_general_experience">General Experience</string>
    <string name="rating_comment">Comment</string>
    <string name="rating_comment_hint">Share your experience</string>
</resources>