<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_mic"
        android:icon="@drawable/sel_tab_mic"
        android:title="@string/main_audio" />

    <item
        android:id="@+id/menu_video"
        android:icon="@drawable/sel_tab_video"
        android:title="@string/main_video" />

    <item
        android:id="@+id/menu_member"
        android:icon="@drawable/ic_tab_member_def"
        android:title="@string/main_member" />

    <item
        android:id="@+id/menu_chat"
        android:icon="@drawable/ic_tab_chat_def"
        android:title="@string/main_chat" />

    <item
        android:id="@+id/menu_more"
        android:icon="@drawable/ic_tab_more_sel"
        android:title="@string/main_more" />
</menu>