<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <io.agora.meeting.ui.widget.AutoEditText
        android:id="@+id/autoedit"
        android:layout_width="280dp"
        android:layout_gravity="center"
        android:layout_height="44dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/login_name"
        android:inputType="textPersonName"
        app:tipEmpty="@string/login_tip_user_name_empty"
        app:tipOver="@string/login_tip_user_name_over"
        app:tipShort="@string/login_tip_user_name_short"
        app:banEmoji="true"
        app:maxLength="20"
        app:minLength="3" />

</FrameLayout>

