<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rating_call_quality"
            android:textColor="@color/global_text_color_black"
            android:textSize="@dimen/global_text_size_middle" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <RatingBar
                android:id="@+id/rb_call_quality"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxHeight="30dp"
                android:minHeight="30dp"
                android:numStars="5"
                android:rating="5"
                android:stepSize="1" />

            <TextView
                android:id="@+id/tv_call_quality"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:textColor="@color/global_text_color_gray"
                android:textSize="@dimen/global_text_size_middle"
                tools:text="5星" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/rating_function_completeness"
            android:textColor="@color/global_text_color_black"
            android:textSize="@dimen/global_text_size_middle" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <RatingBar
                android:id="@+id/rb_function_completeness"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxHeight="30dp"
                android:minHeight="30dp"
                android:numStars="5"
                android:rating="5"
                android:stepSize="1" />

            <TextView
                android:id="@+id/tv_function_completeness"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:textColor="@color/global_text_color_gray"
                android:textSize="@dimen/global_text_size_middle"
                tools:text="5星" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/rating_general_experience"
            android:textColor="@color/global_text_color_black"
            android:textSize="@dimen/global_text_size_middle" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <RatingBar
                android:id="@+id/rb_general_experience"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxHeight="30dp"
                android:minHeight="30dp"
                android:numStars="5"
                android:rating="5"
                android:stepSize="1" />


            <TextView
                android:id="@+id/tv_general_experience"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:textColor="@color/global_text_color_gray"
                android:textSize="@dimen/global_text_size_middle"
                tools:text="5星" />

        </LinearLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/rating_comment"
            android:textColor="@color/global_text_color_black"
            android:textSize="@dimen/global_text_size_middle" />

        <EditText
            android:id="@+id/et_comment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/sel_et_bg"
            android:gravity="start|top"
            android:hint="@string/rating_comment_hint"
            android:maxLines="3"
            android:minLines="3"
            android:padding="12dp"
            android:textSize="@dimen/global_text_size_middle" />


    </LinearLayout>
</FrameLayout>